[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Jacob Gonzalez <jgonzalez@atlassian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
color-backtrace = "0.5"
reformation = "0.5"
anyhow = "1.0"
